# Kaspersky-file-API

./: .gitignore  Makefile  docker-compose.yaml
backend/: .flake8  pyproject.toml
backend/docker/django/: Dockerfile  entrypoint.sh
backend/src/: conftest.py  pytest.ini
backend/src/app/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/base/api/: exceptions.py  serializers.py
backend/src/base/domain/: dto.py  exceptions.py  usecases.py
backend/src/base/domain/rules/: __init__.py  _rules.py
backend/src/base/infra/: dto.py
backend/src/base/infra/repositories/: _repositories.py
backend/src/core/api/: conftest.py  controllers.py  exceptions.py  urls.py
backend/src/core/api/common/: openapi_serializers.py
backend/src/core/api/common/tests/: urls.py
backend/src/core/api/searches/: urls.py  views.py
backend/src/core/api/searches/tests/: test_create_search.py  test_get_search_detail.py  test_get_searches_list.py
backend/src/core/domain/searches/: constants.py  dto.py  rules.py
backend/src/core/domain/searches/services/: exceptions.py
backend/src/core/domain/searches/services/perform_search/: __init__.py  exceptions.py  service.py
backend/src/core/domain/searches/services/tests/: test_perform_search.py
backend/src/core/domain/searches/tasks/: __init__.py  perform_search.py
backend/src/core/domain/searches/usecases/: create_search.py
backend/src/core/domain/searches/usecases/tests/: test_create_search.py
backend/src/core/infra/: baker_recipes.py
backend/src/core/infra/searches/: admin.py  apps.py  baker_recipes.py  constants.py  dto.py
backend/src/core/infra/searches/migrations/: 0001_initial.py  0002_remove_searchfilter_size_and_option_both_null_or_both_filled_and_more.py  0003_alter_searchfilter_creation_date_operator_and_more.py
backend/src/core/infra/searches/models/: __init__.py  models.py  queryset.py
backend/src/core/infra/searches/repositories/search/: __init__.py  read.py  write.py
backend/src/core/infra/searches/repositories/search_filter/: __init__.py  read.py  write.py
frontend/: package-lock.json  package.json  vite.config.js
(+67 files in other folders)
