[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Александр Меньшиков <menshikov.a.v@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
python-decouple = "^3.8"
psycopg2 = "^2.9.10"
djangorestframework = "^3.15.2"
gunicorn = "^23.0.0"
gevent = "^24.10.3"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
